--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,6 @@
 The Play Buddy is a app for IIIT-Delhi persons for getting someone from IIIT-Delhi to play sports from your inerest. It gives you the updates regarding sports events held in our college. We have put a lot of efforts to build this app. Use it and spend some times for sports for a healthy life
 </string>
     <string name="contactus">
-Admin - Admin_Name admin@iiitd.ac.in Mobile number 9876543212 , 9876543234
+Admin - Admin_Name\nadmin@iiitd.ac.in \nMobile number 9876543212 , 9876543234
 </string>
 </resources>
