--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="toolbar_name">Play Buddy:)</string>
+    <string name="toolbar_name">Play Buddy</string>
 
     <string name="aboutus">
 The Play Buddy is a app for IIIT-Delhi persons for getting someone from IIIT-Delhi to play sports from your inerest. It gives you the updates regarding sports events held in our college. We have put a lot of efforts to build this app. Use it and spend some times for sports for a healthy life
