--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,8 +28,10 @@
     <string name="toolbar_name">Play Buddy</string>
 
     <string name="aboutus">
-The Play Buddy is a app for IIIT-Delhi persons for getting someone from IIIT-Delhi to play sports from your inerest. It gives you the updates regarding sports events held in our college. We have put a lot of efforts to build this app. Use it and spend some times for sports for a healthy life
-</string>
+The Play Buddy is an app for IIIT-Delhi person for finding someone from IIIT-Delhi to play sports of same interest. It also gives you the updates regarding sports events held in our college. We have put a lot of efforts to build this app.\n
+\nAshish Jain (ashish18052@iiitd.ac.in)\n
+Sarosh Hasan (sarosh18084@iiitd.ac.in)\n
+Vikash Kumar Pandey (vikash18086@iiitd.ac.in)</string>
     <string name="contactus">
 Admin - Admin_Name\nadmin@iiitd.ac.in \nMobile number 9876543212 , 9876543234
 </string>
